[project]
name = "streamlit-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "beans15", email = "beans15@example.com" }
]
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.41.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
